--- a/cart.css
+++ b/cart.css
@@ -18,6 +18,12 @@
      
     
 }
+.incre,.decre{
+    width: 1rem;
+}
+
+
+
 
 .d-block{
     width: 100%;
@@ -25,7 +31,7 @@
     max-height: 25rem;
 }
 .img-fluid{
-    width: 70%;
+    width: 80%;
 }
 .img-fluid:hover{
     transform: scale(0.9);
@@ -44,7 +50,6 @@
     width: 100%;
     background-color: black;
     color: white;
-    text-align: center;
     opacity: 0.9;
     height: auto;
     position:absolute;
@@ -52,6 +57,7 @@
     right: 5px;
     display: none;
     z-index: 1;
+    display: flex;
     
   }
 
