--- a/cart.css
+++ b/cart.css
@@ -5,6 +5,117 @@
 }
 
 
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
+
+
+.divrow{
+    width: 20%;
+    display: inline-block;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 10px;
+
+    transition: transform .5s;
+    
+     
+    
+}
+.incre,.decre{
+    width: 1rem;
+}
+
+
+
+
+.d-block{
+    width: 100%;
+    margin: auto;
+    max-height: 25rem;
+}
+.img-fluid{
+    width: 80%;
+}
+.img-fluid:hover{
+    transform: scale(0.9);
+}
+.add-to-cart{
+    width: 10rem;
+    margin-bottom: 30px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 2px 2px rgb(197, 189, 189);
+}
+
+
+
+  #close{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+  }
+
+
+
+.sidebar{display: none;}
+
+.cart-item{
+    
+    margin-top: 100px;
+    display: inline-block;
+}
+.updatedimg{width: 10rem;}
+
+
+
+
+@media only screen and (max-width: 575px) {
+
+    .cart-item{
+        margin-top: 10px;
+        display: inline;
+    }
+    .updatedimg{width: 8rem;}
+
+
+    .divrow{
+        width: 50%;
+        align-items: center;
+        text-align: center;
+        display: inline-block;
+        margin:0;
+        
+    }
+
+   
+    
+    .add-to-cart{
+        width: 80%;
+        
+    }
+
+   
+    #count{
+
+        margin-right: 50px;
+        width: 100%;
+    }
+    #view-cart{
+        margin-left: 50px;
+        width: 100%;
+    }
+
+
+     }
+  
+  
 
 .row{
     width: 20%;
